--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
+*/[Ll]ibrary/
+*/[Tt]emp/
+*/[Oo]bj/
+*/[Bb]uild/
+*/[Bb]uilds/
+*/[Ll]ogs/
+*/[Uu]ser[Ss]ettings/
+
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
