--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .collabignore
 
 mono_crash.*.*.json
+mono_crash*
 
 # This .gitignore file should be placed at the root of your Unity project directory
 #
